fix: 修复一些popover-z-index堆叠上下文与一些其它bug

--- a/src/assets/style/public.less
+++ b/src/assets/style/public.less
@@ -12,3 +12,26 @@
 ::-webkit-scrollbar-track {
   background-color: transparent;
 }
+
+
+// popover弹出框动态添加在body中，所以样式需要全局引入
+.yulang-popover-position {
+  min-height: var(--yulang-popover-position-min-height--);
+  max-height: var(--yulang-popover-position-max-height--);
+  width: var(--yulang-popover-reference-width--);
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: white;
+  overflow-y: auto;
+
+  .yulang-popover-triangle {
+    position: absolute;
+    border-style: solid;
+    border-width: 10px 10px 10px 10px;
+    border-color: transparent transparent #ccc transparent;
+    width: 0px;
+    height: 0px;
+    transform: translate(-50%, -20px);
+    left: 50%;
+  }
+}
