--- a/src/packages/yulang-popover/index.less
+++ b/src/packages/yulang-popover/index.less
@@ -8,25 +8,4 @@
       display: inline-block;
     }
   }
-
-  .yulang-popover-position {
-    min-height: var(--yulang-popover-position-min-height--);
-    max-height: var(--yulang-popover-position-max-height--);
-    width: var(--yulang-popover-reference-width--);
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: white;
-    overflow-y: auto;
-
-    .yulang-popover-triangle {
-      position: absolute;
-      border-style: solid;
-      border-width: 10px 10px 10px 10px;
-      border-color: transparent transparent #ccc transparent;
-      width: 0px;
-      height: 0px;
-      transform: translate(-50%, -20px);
-      left: 50%;
-    }
-  }
 }
